[gd_scene load_steps=28 format=2]

[ext_resource path="res://Imports/Characters/Non-enemies/Elf.png" type="Texture" id=1]
[ext_resource path="res://Characters/Scripts/NPCs/Elf.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=24]
radius = 36.0
height = 80.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Stand_downwards"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Stand_left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Stand_right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Stand_upwards"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk_downwards"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk_right"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk_upwards"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Stand_left"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Stand_right"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Stand_downwards"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Stand_upwards"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Walk_left"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Walk_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Walk_downwards"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Walk_upwards"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=22]
states/Stand/node = SubResource( 14 )
states/Stand/position = Vector2( 513, 149 )
states/Walk/node = SubResource( 19 )
states/Walk/position = Vector2( 737, 149 )
transitions = [ "Stand", "Walk", SubResource( 20 ), "Walk", "Stand", SubResource( 21 ) ]
start_node = "Stand"

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="CircleShape2D" id=25]
radius = 500.044

[node name="Elf" type="KinematicBody2D" groups=["NPC"]]
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 92 )
rotation = 1.5708
shape = SubResource( 24 )

[node name="Elf_movement_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Stand_downwards = SubResource( 6 )
anims/Stand_left = SubResource( 7 )
anims/Stand_right = SubResource( 8 )
anims/Stand_upwards = SubResource( 9 )
anims/Walk_downwards = SubResource( 2 )
anims/Walk_left = SubResource( 3 )
anims/Walk_right = SubResource( 4 )
anims/Walk_upwards = SubResource( 5 )

[node name="Elf_movement_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../Elf_movement_player")
active = true
parameters/playback = SubResource( 23 )
parameters/Stand/blend_position = Vector2( -0.00395882, 0.172414 )
parameters/Walk/blend_position = Vector2( -0.00554234, 0.0603448 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 25 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
